# malebolge

./: .gitignore  Cargo.toml  README.md  amalgam.rc  build.rs  malebolge.rc  resource.h
.github/workflows/: release.yml
dbg/: Cargo.toml
dbg/src/: lib.rs
hook/: Cargo.toml
hook/src/: lib.rs
hook_shared/: Cargo.toml
hook_shared/src/: lib.rs
src/: assembly.rs  ctx.rs  debug.rs  lib.rs  location.rs  main.rs  module.rs  process.rs  project.rs  raw.rs  warden.rs
src/asm/: cfo.rs  mod.rs
src/cli/: address.rs  dbg.rs  dump.rs  info.rs  mod.rs  output.rs  view.rs
src/client/: assembly.rs  label.rs  mod.rs  process.rs  raw.rs
src/dbg/: mod.rs  peb.rs
src/gui/: assembly.rs  label.rs  mod.rs  process.rs  raw.rs
src/tab/: assembly.rs  label.rs  mod.rs  raw.rs
src/util/: mod.rs  warden.rs
src/view/: assembly.rs  label.rs  location.rs  mod.rs  raw.rs
src/win/: breakpoint.rs  mod.rs  module.rs  process.rs
