[package]
name = "catwash"
version = "0.0.0"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/catwash.git"
description = "Reverse-engineering sandbox"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
colored = "2.0.0"
thiserror = "1.0.40"

iced-x86 = "1.18.0"
object = { version = "0.31.1", features = ["all"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
