[workspace]
members = ["hook", "hook_shared"]
resolver = "2"

[package]
name = "mbg"
version = "0.0.0"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/malebolge.git"
description = "Reverse-engineering sandbox"

[dependencies]
byteorder = "1.4.3"
thiserror = "1.0.40"

mbg_hook_shared = { path = "hook_shared" }

iced-x86 = "1.18.0"
object = { git = "https://github.com/valaphee/object.git", branch = "va-space", features = ["pe"] }

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
]

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
