[package]
name = "mbg_hook"
version = "0.0.0"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/malebolge.git"
description = "Reverse-engineering sandbox"

[dependencies]
mbg_hook_shared = { path = "../hook_shared" }

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
]

[lib]
crate-type = ["cdylib"]
