[package]
name = "mbg_hook_shared"
version = "0.0.0"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/malebolge.git"
description = "Reverse-engineering sandbox"

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Threading",
]
